[package]
name = "mint"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.11.5"
spl-token = { version="3.3.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="1.0.5", features = [ "no-entrypoint" ] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
solana-program-test = "1.11.5"
solana-sdk = "1.11.5"

[lib]
crate-type = ["cdylib", "lib"]